@@ -1,1 +1,1 @@
-<*.*>: package(ctypes.stubs), use_errno_stubs
+<errno_map.*>: package(ctypes.stubs), use_errno_stubs
