@@ -1,3 +1,4 @@
 bin: [
   "?_build/src/errno_map.byte" {"errno-map"}
+  "_build/src/errno_srcgen.byte" {"errno-srcgen"}
 ]
